Fix signed/unsigned mismatch https://bugs.webkit.org/show_bug.cgi?id=85845

Make literal in assert be unsigned to match comparison on LHS. Avoids
warning on Windows.

Patch by Scott Graham <scottmg@chromium.org> on 2012-05-07
Reviewed by Eric Seidel.

No new tests. No intended functionality change.

* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::splitColumn):

Canonical link: https://commits.webkit.org/103447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116394 268f45cc-cd09-0410-ab3c-d52691b4dbfc